update version node

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "uuid": "1bb71620-3d71-40cd-8b30-844a37983c15"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
+    "node": "14.x",
     "npm": "^6.0.0"
   },
   "license": "MIT"
